--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -44,6 +44,16 @@
         box-shadow: 0px 0px 51px -20px rgba(0,0,0,0.75);
       }
 
+      #headernav1{
+        z-index: 1000;
+        background-color:#FFFFFF;
+        width: 100%;
+        position: fixed;
+        -webkit-box-shadow: 0px 0px 51px -20px rgba(0,0,0,0.75);
+        -moz-box-shadow: 0px 0px 51px -20px rgba(0,0,0,0.75);
+        box-shadow: 0px 0px 51px -20px rgba(0,0,0,0.75);
+      }
+
     
     #headernav ul{
         padding:0px;
@@ -52,6 +62,14 @@
         display: flex;
         justify-content: flex-end;
     }
+
+    #headernav1 ul{
+      padding:0px;
+      margin:1% 70% 1% 0%;
+      list-style-type: none;
+      display: flex;
+      justify-content: flex-end;
+  }
 
     .nav-object{
         margin-top: 8px;
@@ -78,6 +96,16 @@
         color:black;
     }
 
+    #headernav1 li:first-child a{
+      font-size: 22px;
+      font-weight: bold;
+      color: #535150;
+  }
+   
+    #headernav1 li:first-child a:hover {
+        color:black;
+    }
+
 
      /*<---------- About----------> */
 
@@ -91,7 +119,7 @@
     #about1a{
       width:50%;
       height: 100%;
-      margin:150px 0px 100px 180px;
+      margin:150px 0px 100px 150px;
       padding: 15px;
       display: block;
       flex-flow: column;
