--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -89,7 +89,7 @@
     .project_modules .col-md-6 {
       padding-right: 0;
       padding-left: 0;
-      margin-bottom: 10%;
+      padding-bottom: 10%;
     }
 
   .module_link{
@@ -356,6 +356,11 @@
     font-weight: bold;
   }
 
+  .project_modules .col-12,
+  .project_modules .col-md-6 {
+    padding-bottom: 0;
+  }
+
 }
 
 
@@ -377,6 +382,7 @@
 
   /* Large devices (desktops, 992px and up) */
   @media (min-width: 992px) {
+    
   }
 
   /* Extra large devices (large desktops, 1200px and up) */
