--- a/styles/dcc_styles.css
+++ b/styles/dcc_styles.css
@@ -1,143 +1,630 @@
-.title_image {
-    background: #f9f9f9;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    border-radius: 10px;
-    border: solid .5px lightgrey;
-    height: 56vh;
-  }
-  
-  #uwp_hero > img {
-    padding: 10%;
-  }
-  
-  @media screen and (max-width: 767px) {
-    #uwp_hero > img {
-      margin-top: 2.5rem;
-      margin-bottom: 0px;
-    }
-  }
-  
-  #intro_image{
-    margin-top: 1rem;
+/**----------------Mobile-------------------**/
+
+
+/**----------------Desktop-------------------**/
+@media only screen and (min-width: 1000px)  {
+  body{
+    line-height: 1.8em;
+
+    background: none;
+    background-color: white;
+    height: 6000px;
+
     width: 100%;
   }
-  
-  #uwp_before_section {
-    background-color: #f7f7f7;
-    padding-top: 2rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-bottom: .5rem;
-    margin-top: 1.5rem;
-    margin-bottom: 2.5rem;
+
+  .headernav{
+    background-color: white;
   }
+
+/**----------------Intro-------------------**/
+.intro-bg{
+  position: absolute;
+  width: 100%;
+  height: 550px;
+  background: white;
+
+
+}
+
+.intro{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  margin-left: auto;
+  margin-right: auto;
+
+  position: relative;
+  width: 1000px;
+  height: 300px;
+  top: 165.21px;
+
+  line-height: 60px;
+}
+
+.bg-img{
+  position: fixed;
+  top: 0px;
+  z-index: -3;
+}
+
+.bg-img img{
+  width: 100%;
+}
+
+#project-date{
+  font-weight: 300;
+  font-size: 20px;
+
+  line-height: 1.8em;
+}
+
+#project-title{
+  font-weight: 700;
+  font-size: 50px;
+
+  margin-bottom: 2%;
+}
+
+#project-description{
+  font-weight: normal;
+  font-size: 20px;
+
+  line-height: 1.8em;
+}
+
+#project-description a{
+  font-weight: 700;
+  text-decoration: none;
+  color:#28abe2;
+}
+
+
+/**----------------Project Details-------------------**/
+
+.project-details-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  width: auto;
+  height: 333.87px;
+
+
+  top: 955.96px;
+
+
+  z-index: 2;
+
+}
+
+
+.project-details{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  z-index: 2;
+  margin: 2%;
+
+}
+
+.detail-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  position: relative;
+  width: 200px;
+
+  text-align: center;
+
+
+
+
+}
+
+.detail-title{
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 60px;
+}
+
+.emoji-img{
+  font-size: 35px;
+  padding-bottom: 25px;
+}
+
+.details-description{
+  border: solid 2px #E2E2E2;
+  border-radius: 15px;
+  padding: 7px 30px 20px 30px;
+  height: 120px;
+}
+
+
+.details-description a{
+  text-decoration: none;
+  color: #28abe2;
+}
+
+/**----------------The Story-------------------**/
+.storyline-bg{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: white;
+  top: 1040px;
+  bottom: 0;
+
+  z-index: 1;
+}
+
+.storyline{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  width: 700px;
+  height: 350px;
+
+
+  top: 400px;
+}
+
+.storyline-title{
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 80px;
+}
+
+
+/**👋----------------Design Process-------------------👋**/
+/**
+.design-process{
+  display: flex;
+  justify-content: center;
+
+
+}
+
+
+.design-process img{
+  position: absolute;
+  height: 380px;
+  object-fit: cover;
+
+  top: 1680px;
+
+  z-index: 2;
+
+}
+**/
+
+/**👋----------------Problem Space-------------------👋**/
+.color-bg{
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  height: 649.86px;
+  top: 1600px;
+
+  background: #28abe2;
+  z-index: 2;
+
+}
+
+.problem-space-container{
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1000px;
+  height: 485.43px;
+
+  top: 15%;
+  color: white;
+
+  z-index: 2;
+}
+
+.small-process-title{
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 5px;
+  padding-bottom: 40px;
+}
+
+.main-step-title{
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 158%;
+
+  padding-bottom: 20px;
+
+  width: 650px;
+}
+
+.step-description{
+  display: flex;
+  flex-direction: row;
+  width: 600px;
+}
+
+.step-description img{
+  position: absolute;
+  top: 20%;
+  height: 300px;
+
+
+}
+
+
+/**👋----------------Current Experience------------------👋**/
+.background{
+  background-color: white;
+  height: 19000px;
+}
+.current-experience-container{
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  width: auto;
+
+  top: 1800px;
+
+  z-index: 2;
+}
+
+.text{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  width: 470px;
+
+}
+
+.small-text-title{
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 5px;
+  padding-bottom: 15px;
+  color: #28abe2;
+}
+
+.current-experience-title{
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 158%;
+
+  padding-bottom: 15px;
+}
+
+.current-experience-img img{
+  position: relative;
+  width: auto;
+  height: 400px;
+
+  filter: drop-shadow(3px 4px 20px rgba(0, 0, 0, 0.15));
+}
+
+.current-experience-img{
+  padding-left: 50px;
+}
+
+
+
+
+/**👋----------------Problem------------------👋**/
+.problem-container{
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1000px;
+  height: 373.05px;
+  top: 1900px;
+
+  z-index: 2;
+}
+
+.problem-title{
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 158%;
+
+  padding-bottom: 15px;
+}
+
+/**👋----------------Opportunity------------------👋**/
+
+.opportunity-container{
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1000px;
+  height: 373.05px;
+  z-index: 2;
+  top: 1900px
+}
+
+/**👋----------------Solution------------------👋**/
+
+.solution-container{
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  top: 1400px;
+
+  z-index: 2;
+
+}
+
+.redesign-banner{
+  position: relative;
+  top: 400px;
+
+  margin: 0;
+
+}
+
+.redesign-banner img{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 840px;
+
+  margin-right: auto;
+  margin-left: auto;
+
+}
+
+
+
+.img-break{
+  display: flex;
+  justify-content: center;
+
+  position: relative;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  top: 1760px;
+}
+
+.img-break img{
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  height: 300px;
+}
+
+/**👋----------------Break Down------------------👋**/
+.break-down-heading{
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+
+  width: 1000px;
+  padding-bottom: 30px;
+  z-index: 2;
+}
+
+.break-down-container{
+  position: relative;
+  top: 1700px;
+  z-index: 2;
+
+  padding-top: 100px;
+}
+
+.break-down-row{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  margin-left: auto;
+  margin-right: auto;
+
+  width: 1000px;
+}
+
+.final-giff{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding-left: 23%;
   
-  #uwp_before_section img{
-    padding: .5rem;
-  }
+}
+
+.final-gif{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   
-  #uwp_before_section a {
-    display: block;
-    margin-bottom: 1.5rem;
-  }
-  
-  
-  #uwp_survey_data{
-    width: 100%
-  }
-  
-  #interviews_picture{
-    background: url(images/interviews_picture1.jpg);
-    background-size: cover;
-    min-height: 125px;
-  }
-  
-  .survey_data:last-of-type{
-    margin-bottom: 1rem;
-  }
-  
-  #survey1 {
-    padding-left: 1%;
-  }
-  
-  #survey2 {
-    padding-left: 1%;
-  }
-  
-  #survey3 {
-    padding-left: 1%;
-  }
-  
-  .persona_wrapper {
-    margin: auto;
-    min-height: 820px;
-    padding-left: 5px;
-    padding-right: 5px;
-  }
-  
-  .card-img-top {
-    height: 200px;
-  }
-  
-  .card-img-top:first-of-type{
-    height: inherit;
-  }
-  
-  .card-title {
-    margin-top: .5rem;
-  }
-  
-  ul p {
-    font-size: .8rem;
-  }
-  
-  .sammy {
-    color: green;
-    margin-bottom: 0px;
-    margin-top: 0;
-  }
-  
-  .jin {
-    color: orange;
-    margin-bottom: 0px;
-    margin-top: 0;
-  }
-  
-  .amanda {
-    color:  #8200bf;
-    margin-bottom: 0px;
-    margin-top: 0;
-  
-  }
-  
-  .philip {
-    color: blue;
-    margin-bottom: 0px;
-    margin-top: 0;
-  }
-  
-  .vamsi {
-    color: #d2007b;
-    margin-bottom: 0px;
-    margin-top: 0;
-  }
-  
-  .card h4:after {
-    display: none;
-  }
-  
-  #prototype_mockup {
-    background: url(images/prototype_mockup.jpg);
-    background-position: center;
-    background-size: 1880px 1046px;
-  }
-  
-  #prototype {
-    z-index: 1;
-    position: absolute;
-    top: 124px;
-    width: 965px;
-    height: 545px;
-  }
-  
+}
+
+.final-gif img{
+  position: relative;
+  width: auto;
+  height: 400px;
+
+  padding-right: 20px;
+
+}
+
+.break-down-text{
+  margin-left: 2%;
+  margin-right: 2%;
+
+  width: 400px;
+}
+
+.break-down-title{
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 1.8em;
+}
+
+
+/**👋----------------Process------------------👋**/
+/* .behind-the-scenes{
+  background-color: #FFBF00;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+
+
+  height: 300px;
+
+  top: 1800px;
+}
+
+.process-container{
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 2;
+
+  position: relative;
+
+
+  top: 2000px;
+}
+
+.process-title{
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 70px;
+  font-weight: 700;
+  color: white;
+}
+
+.small-process-title{
+  margin-left: auto;
+  margin-right: auto;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 5px;
+  padding-bottom: 40px;
+
+  color:white;
+}
+
+.process-row{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+  padding-top: 30px;
+  padding-bottom: 100px;
+}
+
+.process-img img{
+  height: 430px;
+
+}
+
+.process-heading{
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 1.3em;
+  padding-bottom: 20px;
+}
+
+.process-text{
+    width: 480px;
+    padding-left: 60px;
+} */
+
+
+
+/**👋----------------Personas------------------👋**/
+/* .double-img img{
+  height: 230px;
+  margin: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+} */
+
+
+/**👋----------------Golden Path------------------👋**/
+/* .goldenpath-img img{
+  height: 170px;
+  margin: 2%;
+
+} */
+
+
+/**👋----------------How Might We's and Affinity Mapping------------------👋**/
+/* .double-img2 img{
+  height: 330px;
+  margin: 2%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+} */
+
+
+
+/**👋----------------Reflection------------------👋**/
+/* .reflection{
+  background-color: #FFBF00;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  height: 300px;
+  top: 90px;
+}
+
+.reflection-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  top: 200px;
+
+}
+
+.reflection-title{
+  font-size: 20px;
+  font-weight: 700;
+  margin-left: auto;
+  margin-right: auto;
+
+  width: 600px;
+
+  padding-bottom: 20px;
+}
+
+.reflection-description{
+  margin-left: auto;
+  margin-right: auto;
+
+  width: 600px;
+  padding-bottom: 70px;
+} */
+
+
+
+
+
+}
