--- a/styles/styles.css
+++ b/styles/styles.css
@@ -223,10 +223,10 @@ ol {
 .navbar{
   z-index: 1000;
   width: 100%;
-  position: fixed;
+  /* position: fixed;
   -webkit-box-shadow: 0px 0px 51px -20px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 0px 51px -20px rgba(0,0,0,0.75);
-  box-shadow: 0px 0px 51px -20px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 51px -20px rgba(0,0,0,0.75); */
 }
 
 footer{
