--- a/styles/dcc_styles.css
+++ b/styles/dcc_styles.css
@@ -13,7 +13,7 @@
     width: 100%;
   }
 
-  .headernav{
+  .navbar-expand-lg{
     background-color: white;
   }
 
@@ -269,7 +269,7 @@
 /**👋----------------Current Experience------------------👋**/
 .background{
   background-color: white;
-  height: 9900px;
+  height: 10000px;
 }
 .current-experience-container{
   display: flex;
@@ -320,8 +320,6 @@
 .current-experience-img{
   padding-left: 50px;
 }
-
-
 
 
 /**👋----------------Problem------------------👋**/
@@ -488,6 +486,32 @@
   font-size: 32px;
   font-weight: 700;
   line-height: 1.8em;
+}
+
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.back_home_button {
+  border-radius: 10px;
+  width: 100%;
+  font-family: 'Roboto', sans-serif;
+  font-size: .8rem;
+  font-weight: 600;
 }
 
 
