--- a/styles/cstem_styles.css
+++ b/styles/cstem_styles.css
@@ -268,7 +268,7 @@
 /**👋----------------Current Experience------------------👋**/
 .background{
   background-color: white;
-  height: 12500px;
+  height: 10500px;
 }
 .current-experience-container{
   display: flex;
@@ -478,8 +478,56 @@
   height: 400px;
 
   padding-right: 20px;
+}
+
+.finall-gif{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
 }
+
+.finall-gif img{
+  position: relative;
+  width: auto;
+  height: 400px;
+  padding-right: 20px;
+}
+
+.finall-gif img:first-child{
+  padding-bottom: 2%;
+}
+
+.final-giff{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+}
+
+.final-giff img{
+  position: relative;
+  width: auto;
+  height: 350px;
+
+  padding-right: 20px;
+
+}
+
+/* .final-giff{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+} */
+
+/* .final-giff img{
+  position: relative;
+  width: auto;
+  height: 350px;
+  padding-top:10%;
+
+} */
+
 
 .break-down-text{
   margin-left: 2%;
@@ -488,12 +536,48 @@
   width: 400px;
 }
 
+.break-downn-text{
+  margin-left:5%;
+  width: 580px;
+} 
+
+.breakk-down-text{
+  margin-left:35%;
+  width: 700px;
+}
+
 .break-down-title{
   font-size: 32px;
   font-weight: 700;
   line-height: 1.8em;
 }
 
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.back_home_button {
+  border-radius: 10px;
+  margin-top: 200%;
+  font-family: 'Roboto', sans-serif;
+  font-size: .8rem;
+  font-weight: 600;
+  margin-right: 20%;
+}
 
 /**👋----------------Process------------------👋**/
 /* .behind-the-scenes{
