--- a/styles/explored_styles.css
+++ b/styles/explored_styles.css
@@ -278,7 +278,7 @@
 /**👋----------------Current Experience------------------👋**/
 .background{
   background-color: white;
-  height: 8500px;
+  height: 8800px;
 }
 .current-experience-container{
   display: flex;
@@ -416,6 +416,23 @@
   margin-left: auto;
   margin-right: auto;
   height: 300px;
+}
+
+.img-breakk{
+  display: flex;
+  justify-content: center;
+
+  position: relative;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  top: 1760px;
+}
+
+.img-breakk img{
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  height: 500px;
 }
 
 /**👋----------------Break Down------------------👋**/
