--- a/styles/hc_styles.css
+++ b/styles/hc_styles.css
@@ -16,7 +16,6 @@
   .navbar-expand-lg{
     background-color: white;
   }
-
 /**----------------Intro-------------------**/
 .intro-bg{
   position: absolute;
@@ -77,7 +76,7 @@
 #project-description a{
   font-weight: 700;
   text-decoration: none;
-  color:#28abe2;
+  color:#EBA9C7;
 }
 
 
@@ -141,14 +140,14 @@
 .details-description{
   border: solid 2px #E2E2E2;
   border-radius: 15px;
-  padding: 7px 30px 20px 30px;
+  padding: 20px 30px 20px 30px;
   height: 120px;
 }
 
 
 .details-description a{
   text-decoration: none;
-  color: #8A2BE2;
+  color: #EBA9C7;
 }
 
 /**----------------The Story-------------------**/
@@ -216,7 +215,7 @@
   height: 649.86px;
   top: 1600px;
 
-  background: #8A2BE2;
+  background: #EBA9C7;
   z-index: 2;
 
 }
@@ -259,8 +258,9 @@
 
 .step-description img{
   position: absolute;
-  top: 1%;
-  height: 500px;
+  top: 7%;
+  height: 300px;
+  padding-left: 2%;
 
 
 }
@@ -269,7 +269,7 @@
 /**👋----------------Current Experience------------------👋**/
 .background{
   background-color: white;
-  height: 7800px;
+  height: 12500px;
 }
 .current-experience-container{
   display: flex;
@@ -298,7 +298,7 @@
   font-weight: 700;
   letter-spacing: 5px;
   padding-bottom: 15px;
-  color: #8A2BE2;
+  color: #EBA9C7;
 }
 
 .current-experience-title{
@@ -312,11 +312,17 @@
 .current-experience-img img{
   position: relative;
   width: auto;
-  height: 300px;
-  top:22%;
-  padding-left: 4%;
+  height: 400px;
+
   filter: drop-shadow(3px 4px 20px rgba(0, 0, 0, 0.15));
 }
+
+.current-experience-img{
+  padding-left: 50px;
+}
+
+
+
 
 /**👋----------------Problem------------------👋**/
 .problem-container{
@@ -356,7 +362,7 @@
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  top: 1300px;
+  top: 1400px;
 
   z-index: 2;
 
@@ -364,9 +370,9 @@
 
 .redesign-banner{
   position: relative;
-  top: 300px;
-  width: auto;
-  background: #8A2BE2;
+  top: 500px;
+  background-color: #EBA9C7;
+  height: 640px;
   margin: 0;
 
 }
@@ -376,11 +382,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 740px;
-  padding-top: 3%;
-  padding-bottom: 3%;
-  margin-top: 4%;
-  margin-bottom: 4%;
+  height: 640px;
+
   margin-right: auto;
   margin-left: auto;
 
@@ -398,11 +401,28 @@
   top: 1760px;
 }
 
+.imgg-break{
+  display: flex;
+  justify-content: center;
+
+  position: relative;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  top: 1760px;
+}
+
 .img-break img{
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  height: 500px;
+  height: 300px;
+}
+
+.imgg-break img{
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  height: 600px;
 }
 
 /**👋----------------Break Down------------------👋**/
@@ -422,7 +442,7 @@
 
 .break-down-container{
   position: relative;
-  top: 1700px;
+  top: 1900px;
   z-index: 2;
 
   padding-top: 100px;
@@ -439,26 +459,19 @@
   width: 1000px;
 }
 
-.final-giff{
+.home-class{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* padding-left: 23%; */
+  padding-top: 10%;
   
 }
-
-.final-giff img{
-  height: 450px;
-
-}
-
-
 
 .final-gif{
   display: flex;
   flex-direction: row;
   justify-content: center;
-  
+
 }
 
 .final-gif img{
@@ -477,42 +490,12 @@
   width: 400px;
 }
 
-.breakk-down-text{
-  margin-left:35%;
-  width: 700px;
-}
-
 .break-down-title{
   font-size: 32px;
   font-weight: 700;
   line-height: 1.8em;
 }
 
-.back_home_button {
-  border-radius: 10px;
-  margin-top: 200%;
-  width: 100%;
-  font-family: 'Roboto', sans-serif;
-  font-size: .8rem;
-  font-weight: 600;
-}
-.btn {
-  display: inline-block;
-  font-weight: 400;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  line-height: 1.5;
-  border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
 
 /**👋----------------Process------------------👋**/
 /* .behind-the-scenes{
@@ -595,8 +578,8 @@
   margin: 5%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-} */
+  justify-content: center; */
+}
 
 
 /**👋----------------Golden Path------------------👋**/
