--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -33,9 +33,10 @@
     }
 
     #header_text p{
-      font-size: 1rem;
-      text-align: center;
-      padding-bottom: 30%;
+      width:48%;
+      display:block;
+      line-height: 2rem;
+      text-align:left;
     }
     
 
